--- a/views/default/index.html
+++ b/views/default/index.html
@@ -1,17 +1,90 @@
-{{extend 'default/layout_base.html'}}
+<!--[if HTML5]><![endif]-->
+<!DOCTYPE html>
+<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
+<!--[if lt IE 7]><html class="ie ie6 ie-lte9 ie-lte8 ie-lte7 no-js" lang="{{=T.accepted_language or 'en'}}"> <![endif]-->
+<!--[if IE 7]><html class="ie ie7 ie-lte9 ie-lte8 ie-lte7 no-js" lang="{{=T.accepted_language or 'en'}}"> <![endif]-->
+<!--[if IE 8]><html class="ie ie8 ie-lte9 ie-lte8 no-js" lang="{{=T.accepted_language or 'en'}}"> <![endif]-->
+<!--[if IE 9]><html class="ie9 ie-lte9 no-js" lang="{{=T.accepted_language or 'en'}}"> <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--> <html class="no-js" lang="{{=T.accepted_language or 'en'}}"> <!--<![endif]-->
+<head>
+<title>{{=response.title or request.application}}</title>
+  <!--[if !HTML5]>
+      <meta http-equiv="X-UA-Compatible" content="IE=edge{{=not request.is_local and ',chrome=1' or ''}}">
+  <![endif]-->
+  <!-- www.phpied.com/conditional-comments-block-downloads/ -->
+  <!-- Always force latest IE rendering engine
+       (even in intranet) & Chrome Frame
+       Remove this if you use the .htaccess -->
+     
+  <meta charset="utf-8" />
 
-<div id="sub-header-content">
-    <div id="content-header">
-        <div id="breadcrumb">
-            <a href="#" class="current" title="{{=T('Home')}}" ><i class="icon-home"></i> {{=T('Home')}}</a>
+  <!-- http://dev.w3.org/html5/markup/meta.name.html -->
+  <meta name="application-name" content="{{=request.application}}" />
+
+  <!-- Speaking of Google, don't forget to set your site up:
+       http://google.com/webmasters -->
+  <meta name="google-site-verification" content="" />
+
+  <!--  Mobile Viewport Fix
+        j.mp/mobileviewport & davidbcalhoun.com/2010/viewport-metatag
+        device-width: Occupy full width of the screen in its current orientation
+        initial-scale = 1.0 retains dimensions instead of zooming out if page height > device height
+        user-scalable = yes allows the user to zoom in -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <link rel="shortcut icon" href="{{=URL('static','images/favicon.ico')}}" type="image/x-icon">
+  <link rel="apple-touch-icon" href="{{=URL('static','images/favicon.png')}}">
+
+  <!-- All JavaScript at the bottom, except for Modernizr which enables
+       HTML5 elements & feature detects -->
+  <script src="{{=URL('static','js/modernizr.custom.js')}}"></script>
+
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href='{{=URL("static","css/bootstrap.min.css")}}' />
+  <link rel="stylesheet" href='{{=URL("static","css/bootstrap-responsive.min.css")}}' />
+
+  <link rel="stylesheet" href='{{=URL("static","css/home-syle.css")}}' />
+
+  <!-- Google Web Fonts -->
+  <link href='http://fonts.googleapis.com/css?family=Playball' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+
+</head>
+
+<body>
+     
+    <div class="container">
+      <div class="content">
+
+        <div class="wrapper">
+          <div class="proper-content">
+
+            <div class="row masthead">
+              <a href="{{=URL('index')}}" class="pull-left"  alt='Scrumforme Logo' title='Scrumforme Logo'><h1><span class="color-logo">Scrumfor</span>.me</h1></a>
+              <a href='{{=URL(c="default", f="user")}}' id="login" class="btn btn-primary pull-right">{{=T("Login")}}</a>
+            </div>
+            <div class="content-center">
+                  <h2>{{=T("Coming Soon")}}</h2>
+                  <p>{{=T("Inspired by Agile methodology using Scrum and Kanban simplifying teamwork.")}}</p>
+                  <a href='{{=URL(c="default", f="user", args="register")}}' class="btn btn-large btn-primary">{{=T("Sign up")}}</a>
+             </div>
+
+
+          </div><!-- /.proper-content -->
+
+          <div class="push"></div>
+
+        </div><!-- /.wrapper -->
+
+        <div class="footer-wrapper">
+          <footer>
+            <a href='http://agenciax4.com.br' id="agenciax4-logo" alt="AgenciaX4 Logo" title="AgenciaX4 Logo"><img src='{{=URL("static","img/agenciax4-signature.png")}}' alt="AgenciaX4 Logo" title="AgenciaX4 Logo"></a>
+          </footer>
         </div>
-        <div id="header-name" class="pull-left">
-            <h1>{{=T('Dashboard')}}</h1>
-        </div>
-        <div class="clearfix"></div>
+      </div>
     </div>
-</div>
 
-<div class="container-fluid">
-	<h4>{{=T('Welcome to Scrumforme and enjoy!')}}</h4>
-</div>
+</body>
+</html>
+
