--- a/views/default/user.html
+++ b/views/default/user.html
@@ -1,4 +1,4 @@
-{{extend 'default/layout_base.html'}}
+{{extend 'layout.html'}}
 <div class="span11 offset1">
 <h2>{{=T( request.args(0).replace('_',' ').capitalize() )}}</h2>
 <div id="web2py_user_form">
