--- a/views/default/product_backlog.html
+++ b/views/default/product_backlog.html
@@ -11,6 +11,7 @@
             remove_error : '{{=T("Error in removal!")}}',
             type_error : 'error',
             type_success : 'success',
+            move_sprint_error : '{{=T("Before moving a story to sprint, you must create a sprint!")}}',
         },
         url = {
             createUpdateBacklogItens : '{{=URL("create_update_backlog_itens.json")}}',
@@ -54,7 +55,6 @@
         <div id="target_ajax"></div>
                     
         <div class="container-fluid">
-            {{if sprint:}}
             <div id="backlog_story_buttons" class="row-fluid">
                 <div id="project_info" class="span8 pull-left">
                     <p>{{=project.description}}</p>
@@ -70,86 +70,86 @@
                 <!-- STORY CONTENT -->
                 {{if "stories" in globals():}}
                     {{for story in stories:}}
-                        {{if not story.sprint_id == sprint.id: }}
-                        <ul class="story_container item_container">
-                            <li class="story">
-                                <div class="story_header">
-                                    <div class="text_container">
-                                        <a href="#" class="editable-click story_card editable" data-type="textarea" data-placeholder="Click para escrever" data-pk="{{=story.id}}" data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="story" data-update="true">{{=story.title}}</a>
-                                    </div>
-                                    <div class="buttons_container">
-                                        <button class="btn btn-minimize expand_story pull-right" alt='{{=T("Expand")}}' title='{{=T("Expand")}}'>
-                                            <i class="icon-circle-arrow-down"></i></button>
-                                        <button class="btn delete_item pull-right" alt='{{=T("Remove")}}' title='{{=T("Remove")}}'><i class="icon-trash"></i></button>
-                                        <select class="pull-right benefit" alt='{{=T("Benefit")}}' title='{{=T("Benefit")}}'>
-                                        {{selects="P M G GG".split()}}
-                                        {{if story.benefit:}}
-                                            {{for size in selects:}}
-                                                {{if size == story.benefit:}}
-                                                    <option value="{{=size}}" selected>{{=size}}</option>
-                                                {{else:}}
-                                                    <option value="{{=size}}">{{=size}}</option>
+                        {{if story.sprint_id == None: }}
+                            <ul class="story_container item_container">
+                                <li class="story">
+                                    <div class="story_header">
+                                        <div class="text_container">
+                                            <a href="#" class="editable-click story_card editable" data-type="textarea" data-placeholder="Click para escrever" data-pk="{{=story.id}}" data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="story" data-update="true">{{=story.title}}</a>
+                                        </div>
+                                        <div class="buttons_container">
+                                            <button class="btn btn-minimize expand_story pull-right" alt='{{=T("Expand")}}' title='{{=T("Expand")}}'>
+                                                <i class="icon-circle-arrow-down"></i></button>
+                                            <button class="btn delete_item pull-right" alt='{{=T("Remove")}}' title='{{=T("Remove")}}'><i class="icon-trash"></i></button>
+                                            <select class="pull-right benefit" alt='{{=T("Benefit")}}' title='{{=T("Benefit")}}'>
+                                            {{selects="P M G GG".split()}}
+                                            {{if story.benefit:}}
+                                                {{for size in selects:}}
+                                                    {{if size == story.benefit:}}
+                                                        <option value="{{=size}}" selected>{{=size}}</option>
+                                                    {{else:}}
+                                                        <option value="{{=size}}">{{=size}}</option>
+                                                    {{pass}}
                                                 {{pass}}
+                                            {{else:}}
+                                                {{selects.insert(0,"?")}}
+                                                {{for size in selects:}}
+                                                    {{if size == "?":}}
+                                                        <option value="" disabled selected>?</option>
+                                                    {{else:}}
+                                                        <option value="{{=size}}">{{=size}}</option>
+                                                    {{pass}}
+                                                {{pass}}                    
                                             {{pass}}
-                                        {{else:}}
-                                            {{selects.insert(0,"?")}}
-                                            {{for size in selects:}}
-                                                {{if size == "?":}}
-                                                    <option value="" disabled selected>?</option>
-                                                {{else:}}
-                                                    <option value="{{=size}}">{{=size}}</option>
-                                                {{pass}}
-                                            {{pass}}                    
-                                        {{pass}}
-                                        </select>
-                                        <input class="pull-right story_points only_numbers" type="number" placeholder="?" min="1" value='{{=g_blank_check(story.story_points)}}' alt='{{=T("Story Points")}}' title='{{=T("Story Points")}}'>
-                                        <button class="btn create_definition_ready pull-right" alt='{{=T("Create Definition of Ready")}}' title='{{=T("Create Definition of Ready")}}'>+ {{=T('DR')}}</button>
-                                        <span class="label qtd_definition_ready pull-right tip-bottom" alt='{{=T("Number of Definitions of Ready")}}' title='{{=T("Number of Definitions of Ready")}}'>{{=len(definition_ready[story.id])}}</span>
+                                            </select>
+                                            <input class="pull-right story_points only_numbers" type="number" placeholder="?" min="1" value='{{=g_blank_check(story.story_points)}}' alt='{{=T("Story Points")}}' title='{{=T("Story Points")}}'>
+                                            <button class="btn create_definition_ready pull-right" alt='{{=T("Create Definition of Ready")}}' title='{{=T("Create Definition of Ready")}}'>+ {{=T('DR')}}</button>
+                                            <span class="label qtd_definition_ready pull-right tip-bottom" alt='{{=T("Number of Definitions of Ready")}}' title='{{=T("Number of Definitions of Ready")}}'>{{=len(definition_ready[story.id])}}</span>
+                                        </div>
+                                        <div class="clearfix"></div>
                                     </div>
+                                    {{count = 0}}
+                                    {{for df in definition_ready[story.id]:}}
+                                        {{if definition_ready[story.id][count].story_id == story.id:}}
+                                        <ul class="item_container">
+                                            <li class="definition_ready_container">
+                                                <div class="definition_ready">
+                                                    <div class="text_container">
+                                                        <span class="label tip-right" alt='{{=T("Definition of Ready")}}' title='{{=T("Definition of Ready")}}'>{{=T('DR')}}</span>
+                                                        <a href="#" class="editable-click editable definition_ready_card" data-type="textarea" data-pk="{{=definition_ready[story.id][count].id}}" data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="definition_ready" data-update="true">{{=definition_ready[story.id][count].title}}</a>
+                                                    </div>
+                                                    <div class="buttons_container">
+                                                        <button class="btn btn-minimize expand_definition_ready pull-right" alt='{{=T("Story Points")}}' title='{{=T("Story Points")}}'><i class="icon-circle-arrow-down"></i></button>
+                                                        <button class="btn delete_item pull-right" alt='{{=T("Remove")}}' title='{{=T("Remove")}}'><i class="icon-trash"></i></button>
+                                                        <button class="btn create_task pull-right" alt='{{=T("Create Tast")}}' title='{{=T("Create Task")}}'>+ {{=T("Task")}}</button>
+                                                    </div>
+                                                    <div class="clearfix"></div>
+                                                </div><!-- definition_ready -->
+                                                {{for task in tasks[definition_ready[story.id][count].id]:}}
+                                                    <ul class="item_container zebra_row">
+                                                        <li class="task">
+                                                            <div class="text_container">
+                                                                <a href="#" class="editable-click editable" data-type="textarea" data-pk='{{=task["id"]}}' data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="task" data-update="true">{{=task["title"]}}</a>
+                                                            </div>
+                                                            <div class="buttons_container">
+                                                                <button class="btn delete_item pull-right" alt="Delete" title="Delete"><i class="icon-trash"></i></button>
+                                                                <button class="btn btn-minimize comment_definition_ready pull-right" alt="Comment" title="Comment"><i class="icon-comment-custom"><span>0</span></i></button>
+                                                            </div>
+                                                            <div class="clearfix"></div>
+                                                        </li><!-- task -->
+                                                    </ul>
+                                                {{pass}}
+                                                </li>
+                                            </ul>
+                                            {{count += 1}}
+                                        {{pass}}
+                                    {{pass}}
+                                </li><!-- story -->
+                                <div class="buttons_footer">
+                                    <button class="btn btn-primary pull-right send_story_sprint">{{=T("Send to Sprint")}} <i class="icon-circle-arrow-right icon-white"></i></button>
                                     <div class="clearfix"></div>
                                 </div>
-                                {{count = 0}}
-                                {{for df in definition_ready[story.id]:}}
-                                    {{if definition_ready[story.id][count].story_id == story.id:}}
-                                    <ul class="item_container">
-                                        <li class="definition_ready_container">
-                                            <div class="definition_ready">
-                                                <div class="text_container">
-                                                    <span class="label tip-right" alt='{{=T("Definition of Ready")}}' title='{{=T("Definition of Ready")}}'>{{=T('DR')}}</span>
-                                                    <a href="#" class="editable-click editable definition_ready_card" data-type="textarea" data-pk="{{=definition_ready[story.id][count].id}}" data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="definition_ready" data-update="true">{{=definition_ready[story.id][count].title}}</a>
-                                                </div>
-                                                <div class="buttons_container">
-                                                    <button class="btn btn-minimize expand_definition_ready pull-right" alt='{{=T("Story Points")}}' title='{{=T("Story Points")}}'><i class="icon-circle-arrow-down"></i></button>
-                                                    <button class="btn delete_item pull-right" alt='{{=T("Remove")}}' title='{{=T("Remove")}}'><i class="icon-trash"></i></button>
-                                                    <button class="btn create_task pull-right" alt='{{=T("Create Tast")}}' title='{{=T("Create Task")}}'>+ {{=T("Task")}}</button>
-                                                </div>
-                                                <div class="clearfix"></div>
-                                            </div><!-- definition_ready -->
-                                            {{for task in tasks[definition_ready[story.id][count].id]:}}
-                                                <ul class="item_container zebra_row">
-                                                    <li class="task">
-                                                        <div class="text_container">
-                                                            <a href="#" class="editable-click editable" data-type="textarea" data-pk='{{=task["id"]}}' data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="task" data-update="true">{{=task["title"]}}</a>
-                                                        </div>
-                                                        <div class="buttons_container">
-                                                            <button class="btn delete_item pull-right" alt="Delete" title="Delete"><i class="icon-trash"></i></button>
-                                                            <button class="btn btn-minimize comment_definition_ready pull-right" alt="Comment" title="Comment"><i class="icon-comment-custom"><span>0</span></i></button>
-                                                        </div>
-                                                        <div class="clearfix"></div>
-                                                    </li><!-- task -->
-                                                </ul>
-                                            {{pass}}
-                                            </li>
-                                        </ul>
-                                        {{count += 1}}
-                                    {{pass}}
-                                {{pass}}
-                            </li><!-- story -->
-                            <div class="buttons_footer">
-                                <button class="btn btn-primary pull-right send_story_sprint">{{=T("Send to Sprint")}} <i class="icon-circle-arrow-right icon-white"></i></button>
-                                <div class="clearfix"></div>
-                            </div>
-                        </ul>
+                            </ul>
                         {{pass}}
                     {{pass}}
                 {{pass}}
@@ -160,9 +160,13 @@
 
 
     <!-- SPRINT CONTENT -->
+    {{if sprint:}}
     <div id="sprint" class="span6" data-sprint="{{=sprint.id}}">
-        {{if sprint:}}
+    {{else:}}
+    <div id="sprint" class="span6">
+    {{pass}}
         <div id="sprint-header" class="row-fluid">
+        {{if sprint:}}
             <div class="span5">
                 <h4>{{=sprint.name}}</h4>
             </div>
@@ -173,14 +177,27 @@
                 {{else:}}
                 <button class='disabled btn btn-success pull-right'>{{=T('Launched')}}</button>
                 {{pass}}
-            {{pass}}
             </div>
             <div class="clearfix"></div>
+            {{else:}}
+                <h4>{{=T('New Sprint')}}</h4>
+                {{=form_sprint.custom.begin}}
+                    <!-- name -->
+                    {{ form_sprint.elements('#sprint_name')[0] ['_placeholder'] = T('Name') }}
+                    {{=form_sprint.custom.widget.name}}
+                    <!-- weeks -->
+                    {{ form_sprint.elements('#sprint_weeks')[0] ['_placeholder'] = T('Weeks') }}
+                    {{ form_sprint.elements('#sprint_weeks')[0] ['_class'] = "only_numbers" }}
+                    {{=form_sprint.custom.widget.weeks}}
+                    <button type="submit" class="btn btn-primary">{{=T('Create Sprint')}}</button>
+                {{=form_sprint.custom.end}}
+        {{pass}}
         </div>
+
         <div class="project-items">
         {{if "stories" in globals():}}
             {{for story in stories:}}
-                {{if story.sprint_id == sprint.id: }}
+                {{if story.sprint_id: }}
                     <ul class="story_container item_container">
                         <li class="story">
                             <div class="story_header">
@@ -260,25 +277,11 @@
                             <div class="clearfix"></div>
                         </div>
                     </ul>
-                    {{pass}}
                 {{pass}}
             {{pass}}
-        {{else:}}
-            <h2>{{=T('New Sprint')}}</h2>
-            {{=form_sprint.custom.begin}}
-                <!-- name -->
-                {{ form_sprint.elements('#sprint_name')[0] ['_placeholder'] = T('Name') }}
-                {{=form_sprint.custom.widget.name}}
-                <br>
-                <!-- weeks -->
-                {{ form_sprint.elements('#sprint_weeks')[0] ['_placeholder'] = T('Weeks') }}
-                {{ form_sprint.elements('#sprint_weeks')[0] ['_class'] = "only_numbers" }}
-                {{=form_sprint.custom.widget.weeks}}
-                <br>
-                <button type="submit" class="btn btn-primary">{{=T('Create Sprint')}}</button>
-            {{=form_sprint.custom.end}}
         {{pass}}
         </div><!-- project-items -->
     </div><!-- sprint / span6 -->
     <div class="clearfix"></div>
+
 </div><!-- row-fluid -->
