--- a/views/default/index.html
+++ b/views/default/index.html
@@ -53,6 +53,7 @@
 </head>
 
 <body>
+<a href="https://github.com/gustavox4ids/scrumforme" target="_blank" class="navbar-fixed-top"><img style="-webkit-user-select: none; position: absolute; top: 0; right: 0; border: 0; z-index:9999;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" width="127" height="127"></a>
      
     <div class="container">
       <div class="content">
