changes in comming soon layout

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -67,8 +67,9 @@
             </div>
             <div class="content-center">
                   <h2>{{=T("Coming Soon")}}</h2>
+                  <p>{{=T("The Scrumforme meant to be easy, organized and accessible.")}}</p>
                   <p>{{=T("Inspired by Agile methodology using Scrum and Kanban simplifying teamwork.")}}</p>
-                  <a href='{{=URL(c="default", f="user", args="register")}}' class="btn btn-large btn-primary">{{=T("Sign up")}}</a>
+                  <a href='{{=URL(c="default", f="user", args="register")}}' id="register" class="btn btn-large btn-primary">{{=T("Sign up")}}</a>
              </div>
 
 
