--- a/static/css/home-syle.css
+++ b/static/css/home-syle.css
@@ -22,6 +22,13 @@ h1 {
     margin-top: 20px;
 }
 
+#register {
+    width: 40%;
+    margin-top: 20px;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
 .container, .content {
     position: relative;
 }
@@ -29,7 +36,7 @@ h1 {
 .proper-content {
     padding-top: 40px; /* >= navbar height */
     margin: 0 auto;
-max-width: 700px;
+    max-width: 700px;
 }
 
 .wrapper {
